--- a/.mrconfig
+++ b/.mrconfig
@@ -3,8 +3,8 @@
 [DEFAULT]
 git_gc = git gc "$@"
 jobs = 5
-#include = cat /usr/share/mr/vcsh
 include =
+    # Helper method to includes files
     include_files() {
         for f in "$@"; do
             case "$f" in
@@ -13,9 +13,26 @@ include =
             \
             echo "# INCLUDED FROM : $f"
             cat "$f"
-            echo # Neede in case file isn't terminated with a newline
+            echo # Needed in case file isn't terminated with a newline
         done
     }
+    # First load the libs
+    for d in ~/lib/mr; do
+        if test -d "$d"; then
+            include_files "$d"/*
+        else
+            echo "$d missing" >&2
+        fi
+    done
+    # Then load the vcsh configurations
+    for d in ~/.config/mr/config.d; do
+        if test -d "$d"; then
+            include_files "$d"/*
+        else
+            echo "$d missing" >&2
+        fi
+    done
+    # Finally load the groups
     for d in ~/lib/mr ~/.config/mr/config.d ~/.config/mr/groups.d; do
         if test -d "$d"; then
             include_files "$d"/*
