--- a/circle.yml
+++ b/circle.yml
@@ -8,4 +8,4 @@ dependencies:
 
 test:
   override:
-    - docker run -ti vcsh-home-test sh -c "bash < <(curl -s 'https://raw.github.com/vdemeester/vcsh-home/bootstrap/bootstrap.sh')"
+    - docker run -ti vcsh-home-test sh -c "wget https://raw.github.com/vdemeester/vcsh-home/bootstrap/bootstrap.sh && sh bootstrap.sh"
